// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card snapshots all props 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFF;
  display: none;
  width: 150px;
  height: 100px;
}

@media (min-width:520px) {
  .emotion-1 {
    display: inherit;
    float: left;
    width: 150px;
    height: 100px;
    margin-right: 30px;
    margin-bottom: 10px;
  }
}

.emotion-0 {
  -webkit-transition: opacity 80ms linear;
  transition: opacity 80ms linear;
  will-change: opacity;
  opacity: 0;
}

.emotion-3 {
  color: #222222;
  padding-bottom: 10px;
}

.emotion-5 {
  padding-top: 5px;
}

.emotion-9 {
  width: 100%;
  border-radius: 10px;
  margin-bottom: 10px;
  padding: 20px 25px 10px;
  min-height: 140px;
  background: #f0d5ea;
  border: 1px solid #a07f99;
}

<article
  className="emotion-9 emotion-10"
>
  <figure
    className="emotion-1 emotion-2"
  >
    <img
      className="emotion-0"
      onLoad={[Function]}
      src="http://test.com"
    />
  </figure>
  <h4
    className="emotion-3 emotion-4"
  >
    1. test title
  </h4>
  <p
    className="emotion-5 emotion-6"
  >
    sentence 1
  </p>
  <p
    className="emotion-5 emotion-6"
  >
    sentence 2
  </p>
</article>
`;

exports[`Card snapshots required props 1`] = `
.emotion-9 {
  width: 100%;
  border-radius: 10px;
  margin-bottom: 10px;
  padding: 20px 25px 10px;
  min-height: 140px;
  background: white;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFF;
  display: none;
  width: 150px;
  height: 100px;
}

@media (min-width:520px) {
  .emotion-1 {
    display: inherit;
    float: left;
    width: 150px;
    height: 100px;
    margin-right: 30px;
    margin-bottom: 10px;
  }
}

.emotion-0 {
  -webkit-transition: opacity 80ms linear;
  transition: opacity 80ms linear;
  will-change: opacity;
  opacity: 0;
}

.emotion-3 {
  color: #222222;
  padding-bottom: 10px;
}

.emotion-5 {
  padding-top: 5px;
}

<article
  className="emotion-9 emotion-10"
>
  <figure
    className="emotion-1 emotion-2"
  >
    <img
      className="emotion-0"
      onLoad={[Function]}
      src="http://test.com"
    />
  </figure>
  <h4
    className="emotion-3 emotion-4"
  >
    1. test title
  </h4>
  <p
    className="emotion-5 emotion-6"
  >
    sentence 1
  </p>
  <p
    className="emotion-5 emotion-6"
  >
    sentence 2
  </p>
</article>
`;
